@@ -1,3 +1,8 @@
+2011-06-06  Ken Brown  <kbrown@cornell.edu>
+
+	* cosettable.cc (CosetTable::CosetTable): Tweak relator grouping
+	for Felsch.
+
 2011-05-30  Ken Brown  <kbrown@cornell.edu>
 
 	* Makefile.cygwin: Simplify by using implicit rules.
